feat: Update module imports and add React entry point
Refactors imports to use `.ts` extensions for all module files, ensuring consistency and correctness in the module resolution process.

Adds a script tag in `index.html` to explicitly load the React application's entry point (`index.tsx`), guaranteeing its execution upon page load.

Updates `constants.ts` to include image URLs for leaders and improves descriptions.

--- a/index.html
+++ b/index.html
@@ -75,5 +75,7 @@
 </head>
 <body class="bg-zinc-50 dark:bg-[#050505] text-zinc-900 dark:text-zinc-100">
     <div id="root"></div>
+    <!-- Carrega a aplicação React -->
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
